# dj-tagger

./: LICENSE  README.md  pyproject.toml
djtagger/: __init__.py  analyzer.py  cli.py  config.py  genres.py  scanner.py  tagger.py
